syntax = "proto3";

option go_package = "github.com/tamararankovic/microservices_demo/common/ordering";

package ordering;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service OrderingService{
        rpc Get(GetRequest) returns(GetResponse) {
        	option (google.api.http) = {
			get: "/order/{id}"
		};
        }
        rpc GetAll(GetAllRequest) returns(GetAllResponse) {
        	option (google.api.http) = {
			get: "/order"
		};
        }
        rpc CreateOrder(CreateOrderRequest) returns(CreateOrderResponse) {
                option (google.api.http) = {
                        post: "/order"
                        body: "order"
                };
        }
}

message GetRequest {
        string id = 1;
}

message GetResponse {
        Order order = 1;
}

message GetAllRequest {
}

message GetAllResponse {
        repeated Order orders = 1;
}

message CreateOrderRequest {
        NewOrder order = 1;
}

message CreateOrderResponse {
        Order order = 1;
}

message NewOrder {
        repeated OrderItem items = 1;
        string address = 2;
}

message Order {
        string id = 1;
        google.protobuf.Timestamp createdAt = 2;
        enum OrderStatus {
                PendingApproval = 0;
                Approved = 1;
                Cancelled = 2;
        }
        OrderStatus status = 3;
        repeated OrderItem items = 4;
}

message OrderItem {
        Product product = 1;
        uint32 quantity = 2;
}

message Product {
        string id = 1;
        Color color = 2;
}

message Color {
        string code = 1;
}
